--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -2,6 +2,7 @@ body{
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
+    /*background-color: #f7f7f7;*/
 }
 
 /* Main Container */
@@ -208,7 +209,7 @@ body{
 }
 .seller-profile-picture .seller-full-name{
     margin-top: 16px;
-    font-size: 20px !important;
+    font-size: 20px;
     line-height: 28px;
     font-weight: 700;
     color: #222325;
@@ -234,7 +235,6 @@ input[type = "text"], textarea, select{
 .seller-full-name{
     display: flex;
     justify-content: space-between;
-    font-size: 20px !important;
 }
 
 /**/
@@ -303,7 +303,6 @@ input[type = "text"], textarea, select{
 .profile .topic{
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-bottom: 16px;
 }
 .profile .description .description-content{
