--- a/public/assests/css/jobCard.styles.css
+++ b/public/assests/css/jobCard.styles.css
@@ -24,6 +24,7 @@
     padding-bottom: 8px;
     margin-bottom: 8px;
     border-bottom: 2px solid #dadbdd;
+    color:#007bff !important;
 }
 .job-card .description{
     display: -webkit-box;
