--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -172,6 +172,7 @@ body{
     background-color: #C72300;
     border-radius: 100%;
 }
+
 /*Profile Pic upload*/
  .seller-profile-picture{
     display: flex;
@@ -371,6 +372,7 @@ input[type = "text"], textarea, select{
     border: 1px solid #dadbdd;
     padding: 32px 16px;
     font-size: 14px;
+    margin-bottom: 8px;
 }
 
 /*reviews-header*/
