--- a/public/assests/css/complaints.styles.css
+++ b/public/assests/css/complaints.styles.css
@@ -527,3 +527,18 @@ nav.close ~ .dashboard .top{
     font-size: 14px;
     transition: ease-in-out 0.3s;
 }
+
+button{
+    width: 100%;
+    height: 32px;
+    margin-bottom: 16px;
+    color: #fff;
+    border: 2px solid #1dbf73;
+    background: #1dbf73;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: ease-in-out 0.3s;
+}
+
+
+
