--- a/public/assests/css/viewComplaints.styles.css
+++ b/public/assests/css/viewComplaints.styles.css
@@ -560,3 +560,178 @@ button{
 p{
     font-weight: bold;
 }
+
+ button {
+            width: 80px;
+            height: 32px;
+            color: #fff;
+            border: 2px solid #1dbf73;
+            background: #1dbf73;
+            border-radius: 5px;
+            font-size: 14px;
+            transition: ease-in-out 0.3s;
+        }
+
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");
+
+        :root {
+            --primary: #eeeeee;
+            --secondary: #227c70;
+            --green: #82cd47;
+            --secondary-light: rgb(34, 124, 112, 0.2);
+            --secondary-light-2: rgb(127, 183, 126, 0.1);
+            --white: #fff;
+            --black: #393e46;
+
+            --shadow: 0px 2px 8px 0px var(--secondary-light);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
+        }
+
+        body {
+            height: 100vh;
+            width: 100%;
+            background-color: var(--primary);
+        }
+
+        .navbar {
+            display: flex;
+            align-items: center;
+            height: 70px;
+            background-color: var(--white);
+            padding: 0 8%;
+            box-shadow: var(--shadow);
+        }
+
+        .navbar-logo {
+            cursor: pointer;
+        }
+
+        .navbar-list {
+            width: 100%;
+            text-align: right;
+            padding-right: 2rem;
+        }
+
+        .navbar-list li {
+            display: inline-block;
+            margin: 0 1rem;
+        }
+
+        .navbar-list li a {
+            font-size: 1rem;
+            font-weight: 500;
+            color: var(--black);
+            text-decoration: none;
+        }
+
+        .profile-dropdown {
+            position: relative;
+            width: fit-content;
+        }
+
+        .profile-dropdown-btn {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-right: 1rem;
+            font-size: 0.9rem;
+            font-weight: 500;
+            width: 150px;
+            border-radius: 50px;
+            color: var(--black);
+            /* background-color: white;
+  box-shadow: var(--shadow); */
+
+            cursor: pointer;
+            border: 1px solid var(--secondary);
+            transition: box-shadow 0.2s ease-in, background-color 0.2s ease-in,
+                border 0.3s;
+        }
+
+        .profile-dropdown-btn:hover {
+            background-color: var(--secondary-light-2);
+            box-shadow: var(--shadow);
+        }
+
+        .profile-img {
+            position: relative;
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+            background: url(../public/assests/images/chamal.jpg);
+            background-size: cover;
+        }
+
+        .profile-img i {
+            position: absolute;
+            right: 0;
+            bottom: 0.3rem;
+            font-size: 0.5rem;
+            color: var(--green);
+        }
+
+        .profile-dropdown-btn span {
+            margin: 0 0.5rem;
+            margin-right: 0;
+        }
+
+        .profile-dropdown-list {
+            position: absolute;
+            top: 68px;
+            width: 220px;
+            right: 0;
+            background-color: var(--white);
+            border-radius: 10px;
+            max-height: 0;
+            overflow: hidden;
+            box-shadow: var(--shadow);
+            transition: max-height 0.5s;
+        }
+
+        .profile-dropdown-list hr {
+            border: 0.5px solid var(--green);
+        }
+
+        .profile-dropdown-list.active {
+            max-height: 500px;
+        }
+
+        .profile-dropdown-list-item {
+            padding: 0.5rem 0rem 0.5rem 1rem;
+            transition: background-color 0.2s ease-in, padding-left 0.2s;
+        }
+
+        .profile-dropdown-list-item a {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: 500;
+            color: var(--black);
+        }
+
+        .profile-dropdown-list-item a i {
+            margin-right: 0.8rem;
+            font-size: 1.1rem;
+            width: 2.3rem;
+            height: 2.3rem;
+            background-color: var(--secondary);
+            color: var(--white);
+            line-height: 2.3rem;
+            text-align: center;
+            margin-right: 1rem;
+            border-radius: 50%;
+            transition: margin-right 0.3s;
+        }
+
+        .profile-dropdown-list-item:hover {
+            padding-left: 1.5rem;
+            background-color: var(--secondary-light);
+        }
