--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -32,6 +32,28 @@ body{
     animation-name: animatetop;
     animation-duration: 0.4s;
 }
+
+/* Delete Modal */
+.overlay1{
+    z-index: 1;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+
+}
+#overlay1{
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+}
+
 @-webkit-keyframes animatetop {
     from {top:-300px; opacity:0} 
     to {top:0; opacity:1}
@@ -42,6 +64,15 @@ body{
     to {top:0; opacity:1}
 }
 #Modal {
+    display: none;
+    position: absolute;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: auto;
+    height: auto;
+}
+#Modal1 {
     display: none;
     position: absolute;
     background: #fff;
@@ -270,9 +301,28 @@ input[type = "text"], textarea, select{
 }
 .edit-profile button:hover{
     color: #fff;
-    background: #62646a;
+    background: #31d65a;
+    border: 2px solid #333;
+    box-shadow: none !important;
+}
+/*Delete Profile*/
+.delete-profile button{
+    width: 100%;
+    height: 32px;
+    margin-bottom: 16px;
+    color: #333;
+    border: 2px solid #333;
+    background: none;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: ease-in-out 0.3s;
+}
+.delete-profile button:hover{
+    color: #fff;
+    background: #f81d00;
     border: 2px solid #333;
 }
+
 /*User Info*/
 .profile-container .profile .user-info{
     padding-top: 16px;
